<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/settings_linearview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settings"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/instructions_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipe_left_for_instructions"
                android:textSize="25sp" />

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/backgroundcolor_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/background_color"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/backgroundbutton_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <!--style="?android:attr/buttonBarStyle"-->
                <Button
                    android:id="@+id/redbackground_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/red"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />
                <!--style="?android:attr/buttonBarButtonStyle"-->

                <Button
                    android:id="@+id/greenbackground_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/green"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/bluebackground_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/blue"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textcolor_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_color"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/blacktext_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/black_text" />

                <RadioButton
                    android:id="@+id/whitetext_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/white_text" />

                <RadioButton
                    android:id="@+id/bluetext_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_text" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/gridsize_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid_size"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <SeekBar
                android:id="@+id/gridsize_seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="0"/>
            <!--max is size 15 min is size 5-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_5"
                    android:textSize="25sp"
                    android:layout_margin="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_15"
                    android:textSize="25sp"
                    android:layout_margin="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>