<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".MainActivity"
    android:id="@+id/main_contraintlayout">

    <Button
        android:id="@+id/settingsmain_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/horizontal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/vertical_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vertical"
        app:layout_constraintBaseline_toBaselineOf="@+id/horizontal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/horizontal_button" />

    <TableLayout
        android:id="@+id/board_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/board_row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />
        </TableRow>

        <TableRow
            android:id="@+id/board_row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />
        </TableRow>

        <TableRow
            android:id="@+id/board_row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />
        </TableRow>

        <TableRow
            android:id="@+id/board_row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView15"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

        </TableRow>

        <TableRow
            android:id="@+id/board_row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView20"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textSize="35sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/piecepos_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/constraint_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>